# cpp-cmake-ctest-stub

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: sort_arrays.h
src/: CMakeLists.txt  sort_arrays.cpp
tests/: CMakeLists.txt  test_sort_arrays.cpp
